K8sKind/meteoretrieval.yaml
apiVersion: v1
kind: Service
metadata:
  name: meteoretrieval
spec:
  selector:
    app: meteoretrieval
  ports:
    - port: 12040
      targetPort: 12040
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meteoretrieval
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meteoretrieval
  template:
    metadata:
      labels:
        app: meteoretrieval
    spec:
      nodeSelector:
        custom-label: "worker"
      containers:
      - name: meteoretrieval
        image: meteoretrieval
        imagePullPolicy: Never
        ports:
        - containerPort: 12040
      restartPolicy: Always
