K8sKind/usermanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanager
spec:
  selector:
    app: usermanager
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermanager
  template:
    metadata:
      labels:
        app: usermanager
    spec:
      nodeSelector:
        custom-label: "worker"
      containers:
      - name: usermanager
        image: usermanager
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
      restartPolicy: Always
